# xn_esp32_esptts

./: CMakeLists.txt  partitions.csv  sdkconfig.defaults
components/xn_coze_chat/: CMakeLists.txt  audio_downlink.cpp  audio_downlink.h  audio_uplink.cpp  audio_uplink.h  base64_codec.cpp  base64_codec.h  coze_chat.cpp  coze_chat.h  coze_opus_decoder.cpp  coze_opus_decoder.h  coze_websocket.cpp  coze_websocket.h  idf_component.yml  opus_buffer.c  opus_buffer.h  simple_ring_buffer.c  simple_ring_buffer.h
components/xn_tts/: CMakeLists.txt  README.md
components/xn_tts/esp_tts/: esp_tts_voice_xiaoxin.h
components/xn_tts/include/: xn_tts.h
components/xn_tts/src/: xn_tts.c
main/: CMakeLists.txt  main.c  tts_test.c  tts_test.h
main/coze_chat_app/: coze_chat_app.c  coze_chat_app.h
